# text-book

./: .env.example  .gitignore  COMPREHENSIVE_CHANGES_INDEX.md  DEPLOYMENT_CHECKLIST.md  ENV_CONFIGURATION.md  FINAL_STATUS.md  FINAL_STATUS_REPORT.md  IMPLEMENTATION_COMPLETE_SUMMARY.md  PHASE_1_SETUP_PROGRESS.md  PHASE_8_DEPLOYMENT_COMPLETE.md  PROJECT_UPGRADE_SUMMARY.md  QUICK_START_REFERENCE.md  README_NEW.md  TODO.md  docusaurus.config.ts  package.json  sidebars.ts
.github/workflows/: deploy-backend.yml  deploy-frontend.yml
.specify/memory/: constitution.md
backend/: .env.example  DEPLOYMENT.md  README.md  pyproject.toml  requirements.txt
backend/src/: __init__.py  main.py
backend/src/ai/rag/: __init__.py  embeddings.py  models.py  retriever.py
backend/src/ai/tasks/: __init__.py  base.py  extractor.py  policy_task.py  rag_task.py  summarizer.py
backend/src/auth/: __init__.py  jwt_handler.py  models.py  session.py
backend/src/routes/: __init__.py  auth.py  rag.py
docs/: 1-introduction.md  2-machine-learning.md  3-computer-vision.md  4-robot-control.md  5-navigation.md  6-future.md  deep-learning.md  emerging-topics.md  humanoid-robotics.md  knowledge-systems.md  nlp.md  reinforcement-learning.md
docs/api/: chatbot-api.md  document-upload.md  overview.md  rag-system.md
docs/auth/: login-signup.md  roles.md  sessions.md
docs/db/: schema.md
docs/deployment/: deployment-guide.md  setup.md
docs/product/: overview.md
specs/1-textbook-generation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/auth/: AuthContext.tsx  (+3 more)
(+23 files in other folders)
